frontend/src/_styles/queryManager.scss
/* ... */
.rest-api-tabpanes-body {
  .CodeMirror.cm-s-monokai.CodeMirror-wrap {
    background-color: var(--slate3) !important;
  }
}

.runps-editor {
  .CodeMirror.cm-s-monokai.CodeMirror-wrap,
  .cm-s-monokai .CodeMirror-gutters {
    background-color: var(--slate3) !important;
  }
}

.CodeMirror.cm-s-monokai.CodeMirror-wrap {
  background-color: transparent !important;

  .cm-variable,
  .cm-comment {
    font-size: 12px !important;
    color: #f8f8f2 !important;
  }
}

.query-icon-wrapper {
  width: 16px;
  height: 16px;
}

.query-manager-btn-svg-wrapper {
  padding: 2.67px;
}

.rest-api-delete-field-option {
  padding: 1.33px 2px;
}

.rest-api-add-field-svg {
  width: 18px;
  height: 18px;
  padding: 3px;
  display: flex;
}

// custom-toggle-switch for query manager
.custom-toggle-switch {
  display: flex;

  .switch {
    position: relative;
    display: inline-block;
    width: 28px;
    height: 16px;
  }

  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }

  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }

  .slider:before {
    position: absolute;
    content: "";
    height: 12px;
    width: 12px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    -webkit-transition: .2s;
    transition: .2s;
  }

  input {
    border: 0 !important;
  }

  input[type=checkbox]:checked+.slider {
    background-color: var(--indigo9);
  }

  input[type=checkbox]:checked:hover+.slider {
    background-color: #3451B2;
  }

  input[type=checkbox]:checked:active+.slider {
    background-color: var(--indigo9);
    box-shadow: 0px 0px 0px 4px #C6D4F9;
  }

  input[type=checkbox]:checked+.slider:before {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }

  input[type=checkbox]+.slider {
    background-color: var(--slate7);
  }

  input[type=checkbox]:hover+.slider {
    background-color: #D9E2FC;
  }

  input[type=checkbox]:active+.slider {
    background: #E6EDFE;
    box-shadow: 0px 0px 0px 4px #C6D4F9;
    border-radius: 12px;
  }

  /* Rounded sliders */
  .slider.round {
    border-radius: 12px;
    width: 28px;
  }

  .slider.round:before {
    border-radius: 50%;
  }
}

.custom-toggle-switch.theme-dark {
  input[type=checkbox]+.slider {
    background-color: #47505D !important;
  }

  input[type=checkbox]:hover+.slider {
    background-color: #D9E2FC;
  }

  input[type=checkbox]:active+.slider {
    background: #E6EDFE;
    box-shadow: 0px 0px 0px 4px #C6D4F9;
    border-radius: 12px;
  }

  input[type=checkbox]:checked+.slider {
    background-color: var(--indigo9) !important;
  }

  input[type=checkbox]:checked:hover+.slider {
    background-color: #3451B2 !important;
  }

  input[type=checkbox]:checked:active+.slider {
    background-color: var(--indigo9) !important;
    box-shadow: 0px 0px 0px 4px #C6D4F9 !important;
  }
}

.fit-content {
  max-width: fit-content;
}

.empty-gds-container {
  .info-container {
    display: flex;
    align-items: center;
    background-color: var(--slate3);
    border-radius: $border-radius;
    padding: 16px 32px;
    font-size: 12px;
    color: var(--slate11);

    .info {
      margin-left: 10px;
    }
  }
}

.add-gds-secondary-button {
  background-color: var(--indigo3);
  color: var(--indigo9);
  max-height: 34px;
  height: 34px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 4px 16px;
  gap: 6px;
  font-weight: 500;
  border: 0 !important;
  transition: .4s;

  &:hover {
    background-color: var(--slate7);
    color: var(--slate11);
  }
}


.query-manager-tooltip {
  max-width: 800px;
  overflow-wrap: break-word;
}

.query-manager-ds-select-tooltip {
  max-width: 230px;
  overflow-wrap: break-word;
}

.dd-select-control-chevron {
  position: absolute;
  right: 0;
}

.dd-select-value-badge {
  border-radius: 6px;
  background: var(--slate3) !important;
  text-transform: none;
  color: var(--slate12) !important;
}

.dd-select-alert-error {
  border-radius: 6px;
  border: 1px solid var(--tomato-05, #FDD8D3);
  background: var(--tomato-02, #FFF8F7);
  padding: 8px;
  font-size: 10px;
  font-weight: 400;
  color: var(--tomato-09, #E54D2E);

  svg {
    height: 17px;
    width: 17px;
    margin-right: 2px;
  }

  svg>path {
    fill: var(--tomato-09, #E54D2E);
    opacity: 0.75;
  }
}

.tdb-join-filtersection {
  .codehinter-plugins {
    border: 0 !important;
  }
}

.tjdb-codehinter {
  .CodeMirror {
    font-size: 12px !important;
  }
}

.foreignKeyAcces-container {
  border-radius: 4px;

  .tdb-dropdown-btn-foreignKeyAccess {
    border: 1px solid transparent !important;
    border-radius: 4px !important;
    height: 33px !important;

    &:hover {
      border: 1px solid transparent !important;
      // background: transparent !important;
    }

    &:focus {
      border: 1px solid var(--indigo-09, #3E63DD) !important;
      background: transparent !important;
      box-shadow: 0px 0px 0px 1px #C6D4F9
    }

  }
}

.tdb-dropdown-btn {
  &:active {
    border: 1px solid var(--indigo-09, #3E63DD) !important;
    background: var(--indigo2, #F8FAFF);
    box-shadow: 0px 0px 0px 1px #C6D4F9
  }
}

.copilot-section-header {
  background-color: var(--surfaces-surface-01);
  border: 1px solid var(--borders-disabled-on-white);
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
}

.query-manager-input-elem {
  input {
    background-color: var(--base) !important;
    padding-right: 12px !important;
  }
}

.query-hinter {
  .cm-s-base16-light.CodeMirror,
  .CodeMirror-scroll,
  .CodeMirror-gutters {
    background-color: var(--slate3) !important;
  }

  .cm-scroller {
    border-bottom-left-radius: 4px;
    overscroll-behavior: auto !important;
  }
}

.staticToggle {
  opacity: 0.5;
}

.preview-header {
  // border-top: 20px solid red;
}
/* ... */

